Add JCF2